[gd_scene load_steps=11 format=2]

[ext_resource path="res://options.gd" type="Script" id=1]
[ext_resource path="res://TitleScreenRelated/prison_options.png" type="Texture" id=2]
[ext_resource path="res://TitleScreenRelated/cursor100.png" type="Texture" id=3]
[ext_resource path="res://new_dynamicfont.tres" type="DynamicFont" id=4]
[ext_resource path="res://TitleScreenRelated/unmute.png" type="Texture" id=5]
[ext_resource path="res://TitleScreenRelated/mute.png" type="Texture" id=6]
[ext_resource path="res://CircularBold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 7 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 20.0
margin_right = 700.0
margin_bottom = 780.0
size_flags_horizontal = 4
custom_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 120.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 600.0
margin_bottom = 630.0
size_flags_horizontal = 4
custom_constants/separation = 20

[node name="Mute" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 100.0
mouse_default_cursor_shape = 2
texture_hover = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/Mute"]
margin_left = 100.0
margin_right = 308.0
margin_bottom = 112.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Mute/HBoxContainer"]
margin_right = 208.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 4 )
text = "MUTE"

[node name="MuteSymbol" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/Mute/HBoxContainer"]
margin_left = 228.0
margin_right = 328.0
margin_bottom = 112.0
focus_mode = 0
toggle_mode = true
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )

[node name="Character_Button" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 600.0
margin_bottom = 220.0
mouse_default_cursor_shape = 2
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Character_Button"]
margin_left = 100.0
margin_right = 496.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 4 )
text = "CHARACTER"

[node name="Language_Button" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 240.0
margin_right = 600.0
margin_bottom = 340.0
mouse_default_cursor_shape = 2
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Language_Button"]
margin_left = 100.0
margin_right = 496.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 4 )
text = "LANGUAGE"

[node name="Back" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 360.0
margin_right = 600.0
margin_bottom = 460.0
mouse_default_cursor_shape = 2
texture_hover = ExtResource( 3 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Back"]
margin_left = 100.0
margin_right = 500.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 4 )
text = "BACK"

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_left = 166.0
margin_top = 611.0
margin_right = 650.0
margin_bottom = 754.0
custom_colors/title_color = Color( 0, 0, 0, 1 )

[node name="English" type="Button" parent="WindowDialog"]
margin_left = 47.1683
margin_top = 28.0
margin_right = 206.168
margin_bottom = 116.0
custom_fonts/font = SubResource( 1 )
text = "English"

[node name="Thai" type="Button" parent="WindowDialog"]
margin_left = 280.0
margin_top = 28.0
margin_right = 439.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 2 )
text = "Thai"

[node name="Label" type="Label" parent="WindowDialog"]
margin_left = 210.0
margin_top = -22.0
margin_right = 283.0
margin_bottom = 3.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Language"
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Mute" to="." method="_on_Mute_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Character_Button" to="." method="_on_Character_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Language_Button" to="." method="_on_Language_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="WindowDialog/English" to="." method="_on_English_pressed"]
[connection signal="pressed" from="WindowDialog/Thai" to="." method="_on_Thai_pressed"]
